force-app/main/default/objects/Lilly_H1_HCP_Patient_DI__c/Lilly_H1_HCP_Patient_DI__c.object-meta.xml
<CustomObject>
    <label>HCP Patient DI</label>
    <nameField>
        <label>HCP Patient DI Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>HCP Patient DIs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>