force-app/main/default/objects/Lilly_H1_HCP_Patient_DI__c/fields/Lilly_Account__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>HCP Patient DIs</relationshipLabel>
    <relationshipName>HCP_Patient_DIs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>