force-app/main/default/objects/Lilly_H1_HCP_Patient_DI__c/fields/Lilly_H1_DI_Type__c.field-meta.xml
<CustomField>
    <fullName>Lilly_H1_DI_Type__c</fullName>
    <label>H1 DI Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>