force-app/main/default/objects/Lilly_H1_HCP_Patient_DI__c/fields/Lilly_H1_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Lilly_H1_Percentage__c</fullName>
    <label>Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>