force-app/main/default/objects/Lilly_H1_HCP_Patient_DI__c/fields/Lilly_H1_Unique_ID__c.field-meta.xml
<CustomField>
    <fullName>Lilly_H1_Unique_ID__c</fullName>
    <externalId>true</externalId>
    <label>H1 Unique ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>