force-app/main/default/objects/Lilly_H1_HCP_Patient_DI__c/fields/Lilly_H1_Value__c.field-meta.xml
<CustomField>
    <fullName>Lilly_H1_Value__c</fullName>
    <label>Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>